Added some changes

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/913b00d8f7.js" crossorigin="anonymous"></script>
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Health Now</title>
   </head>
   <body>
     <noscript>
